# simple-pokedex

./: Cargo.toml  README.org  flake.nix
src/: main.rs  pokedex.rs  pokemon.rs
