[package]
name = "simple-pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.9.0", features = ["image"]}
serde = {version = "1.0.164", features = ["derive"]}
ureq = {version = "2.7.0", features = ["json"]}
